--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,8 @@
     --color-white: #fff;
     --color-black: #171717;
     --bg-pink: #DDBCA6;
-    --bg-dark: #DDBCA6;
+    --bg-pink-dark: #A58E7D;
+    --bg-dark: #292929;
     --bg-black: #000000;
     --bg-degrate-dark: radial-gradient(circle, rgba(42,42,42,1) 0%, rgba(18,18,18,1) 200%);
     --gold-blod: #8A5913;
@@ -18,6 +19,11 @@
     src: url('../fonts/champage.ttf');
 }
 
+@font-face{
+    font-family: 'Bembo';
+    src: url('../fonts/bembo.otf');
+}
+
 .form{
     display: block;
     width:100%;
@@ -28,6 +34,11 @@
     color:white;
     margin:auto;
     font-weight: bold;
+}
+
+.mancha{
+    display: block;
+    max-width: 250px;
 }
 
 .btn{
@@ -55,7 +66,10 @@
     margin-top:10px;
 }
 
-#topSection h1,h2,h4,p{
+#topSection h1,
+#topSection h2,
+#topSection h4,
+#topSection p{
     color:white;
     font-family: 'Calibri';
     text-align:center;
@@ -102,4 +116,285 @@
 #topSection form .btn{
     color:black;
     font-weight: bold;
+}
+
+/* SERVICE SECTION */
+
+#serviceSection img{
+    display:block;
+    width:100%;
+    max-width: 200px;
+    margin:auto;
+}
+
+#serviceSection .target{
+    position:relative;
+    display:block;
+    margin:auto;
+    margin-top:25px;
+    margin-bottom:25px;
+    background-color: var(--bg-pink);
+    border-radius:10px;
+    width:90%;
+    max-width:400px;
+    padding:20px;
+    min-height:420px;
+}
+
+#serviceSection .target:hover{
+    cursor:pointer;
+    transition: all .5s ease-in-out;
+    box-shadow: 0px 0px 25px 0px rgba(0,0,0,.5);
+}
+
+#serviceSection .taregt h3,
+#serviceSection .target h4{
+    font-weight: bold;
+}
+
+#serviceSection .target h3{
+    font-size:18px;
+    font-weight: normal;
+    text-align: center;
+    margin-top:20px;
+    font-weight: bold;
+    font-family: 'Bembo';
+}
+
+#serviceSection .target h4{
+    font-weight: bold;
+    font-family: 'Champage';
+    letter-spacing: 2px;
+    font-size:15px;
+    color:black;
+}
+
+#experienceSection h2{
+    color:black;
+    letter-spacing: 0px;
+    font-size:35px;
+    font-family: 'Bembo';
+    text-align: center;
+}
+
+#experienceSection h2 span{
+    font-size:90px;
+    padding:5px 5px;
+    color: var(--bg-pink);
+}
+
+#experienceSection .target{
+    display: block;
+    width:100%;
+    margin: 20px 0;
+}
+
+#experienceSection .target img{
+    position: absolute;
+    display:block;
+    width: 60%;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    margin:auto;
+}
+
+#experienceSection .target span{
+    display: block;
+    font-family: 'Champage';
+    color:black;
+    text-align: center;
+    font-size:18px;
+    max-width: 300px;
+    margin:auto;
+}
+
+#experienceSection .target div{
+    position: relative;
+    display: block;
+    max-width: 100px;
+    height:100px;
+    background: var(--bg-dark);
+    border-radius: 50%;
+    margin:20px auto;
+}
+
+/* OUR WORK */
+
+#weWorkSection h2{
+    color: var(--bg-pink);
+    text-align: center;
+    letter-spacing: 5px;
+}
+
+#weWorkSection{
+    position: relative;
+    background: var(--bg-degrate-dark);
+    overflow: hidden;
+}
+
+#weWorkSection .row .target{
+    display: block;
+    max-width: 300px;
+    background: var(--btn-gold-gradient);
+    margin:auto;
+    border-radius: 50%;
+    padding: 3px;
+    margin: 20px auto;
+}
+
+#weWorkSection .row .target img{
+    display: block;
+    width:100%;
+    background: var(--bg-dark);
+    border-radius: 50%;
+    padding: 3px;
+}
+
+
+/* ABOUT SECTION */
+
+#aboutSection{
+    background: white;
+    padding: 20px 0px;
+}
+
+#aboutSection h2,
+#aboutSection h3,
+#aboutSection h4{
+    color: var(--bg-dark);
+}
+
+#aboutSection .content-light{
+    display: block;
+    width: 100%;
+    background: white;
+}
+
+#firstAbout{
+    padding: 25px;
+    background:var(--bg-pink);
+}
+
+#firstAbout h3{
+    text-align: center;
+    font-size:18px;
+    letter-spacing: 5px;
+    font-weight: bold;
+}
+
+#firstAbout h2{
+    text-align: center;
+}
+
+#firstAbout i{
+    display: block;
+    text-align: center;
+}
+
+#firstAbout h5{
+    text-align: center;
+    font-size:25px;
+}
+
+#secondAbout{
+    display:block;
+    width:100%;
+    background: var(--bg-pink);
+}
+
+#secondAbout img{
+    position: relative;
+    display: block;
+    width:100%;
+    margin:auto;
+    top:-70px;
+}
+
+#secondAbout h2,
+#secondAbout p{
+    font-family:'Calibri';
+}
+
+#secondAbout h2{
+    font-size:28px;
+    letter-spacing: 5px;
+}
+
+#secondAbout .col-12 div{
+    padding-left: 15px;
+    margin-top:25px;
+    border-left: 4px solid var(--gold-blod);
+}
+
+#secondAbout p{
+    font-size:15px;
+    letter-spacing: 0px;
+}
+
+#footerSection h2{
+    text-align: center;
+    margin:auto;
+    width: 90%;
+    max-width: 500px;
+    display: block;
+    color: var(--bg-pink-dark);
+    font-weight: bold;
+    font-size:35px;
+}
+
+#footerSection .numbers{
+    color:white;
+    background-color: var(--bg-pink-dark);
+}
+
+#footerSection .numbers h3{
+    display:block;
+    text-align: center;
+    font-size:70px;
+    margin: 20px auto;
+    font-family: 'Bembo';
+    font-weight: bold;
+}
+
+#footerSection .numbers h4{
+    display: block;
+    text-align: center;
+    font-size:20px;
+    margin: 20px auto;
+    letter-spacing: 0;
+    font-weight: normal;
+    font-family: 'Champage';
+    max-width: 250px;
+}
+
+#end{ 
+    display: block;
+    background: var(--bg-degrate-dark);
+}
+
+#end h2{
+    font-family: 'Calibri';
+    color:white;
+    letter-spacing: 5px;
+}
+
+#end .target{
+    display: block;
+    margin: 30px 0px;
+}
+
+#end .target img{
+    display: block;
+    margin: 20px auto;
+    max-width: 40px;
+    text-align: center;
+}
+
+#end .target h4{
+    color: white;
+    font-size: 17px;
+    letter-spacing: 0;
+    text-align: center;
 }
