--- a/styles/style.css
+++ b/styles/style.css
@@ -149,16 +149,18 @@
 
 #serviceSection .taregt h3,
 #serviceSection .target h4{
+    display: block;
     font-weight: bold;
+    text-align: center;
 }
 
 #serviceSection .target h3{
     font-size:18px;
     font-weight: normal;
-    text-align: center;
     margin-top:20px;
     font-weight: bold;
     font-family: 'Bembo';
+    color:black;
 }
 
 #serviceSection .target h4{
@@ -166,8 +168,6 @@
     font-family: 'Champage';
     letter-spacing: 2px;
     font-size:15px;
-    color:black;
-    text-align: center;
 }
 
 #experienceSection h2{
