--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@
 }
 
 #topSection::before{
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     content: '';
@@ -116,6 +116,7 @@
     display: block;
     width: 100%;
     height:100%;
+    z-index: -1;
 }
 
 #topSection .logo{
