--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,10 @@
     src: url('../fonts/bembo.otf');
 }
 
+.row-max{
+    max-width:1150px;
+    margin:auto;
+}
 
 
 .form{
@@ -82,13 +86,27 @@
     z-index:-10;
 }
 
+  
+  #progress-bar{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    display:block;
+    width:0%;
+    height:100%;
+    background-color: var(--bg-yellow);
+    z-index: 5;
+    transition: all .5s ease-in-out;
+  }
+
 
 /* TOP SECTION  */
 
 #topSection{
     width:100%;
     height:auto;
-    min-height: 100vh;
 }
 
 
@@ -112,7 +130,6 @@
     top:0;
     left:0;
     content: '';
-    background-image: url('../img/bg.png');
     background-size: cover;
     background-position: top center;
     display: block;
@@ -498,7 +515,7 @@
     display: block;
     text-align: center;
     font-size:20px;
-    margin: 20px auto;
+    margin: 2px auto 20px auto;
     letter-spacing: 0;
     font-weight: normal;
     font-family: 'Champage';
