--- a/styles/stylesDesktop.css
+++ b/styles/stylesDesktop.css
@@ -64,6 +64,18 @@
         margin-top:100px;
     }
 
+    #serviceSection .row{
+        background-color: inherit;
+        border-radius: 0px;
+        padding: 0px;
+    }
+
+    #serviceSection .target:hover{
+        cursor:pointer;
+        transition: all .5s ease-in-out;
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,.5);
+    }
+
     #secondAbout{
         position:relative;
         background:#fff;
