--- a/styles/style.css
+++ b/styles/style.css
@@ -267,7 +267,7 @@ input:-webkit-autofill:focus,
     background-color: var(--bg-pink);
     border-radius:10px;
     width:100%;
-    padding:10px;
+    padding:35px 10px;
     min-height:320px;
 }
 
@@ -284,6 +284,7 @@ input:-webkit-autofill:focus,
 #serviceSection .target h4{
     display: block;
     font-weight: bold;
+    text-align: center !important;
 }
 
 #serviceSection .target h3{
