--- a/styles/style.css
+++ b/styles/style.css
@@ -647,6 +647,7 @@ input:-webkit-autofill:focus,
 #end .target{
     display: block;
     margin: 30px 0px;
+    text-decoration: none;
 }
 
 #end .target img{
